# UC2Workflow

./: .gitignore  README.md
covid19_BBs/: README.md  setup.cfg
covid19_BBs/src/covid19_BBs_commons/: assets.py  commons.py  image.py
covid19_BBs/src/maboss/: main.py
covid19_BBs/src/meta_analysis/: main.py
covid19_BBs/src/personalize_patient/: main.py
covid19_BBs/src/physiboss/: main.py
covid19_BBs/src/single_cell_processing/: main.py
covid19_pilot_workflow/: README.md
covid19_pilot_workflow/PyCOMPSs/: covid19_pilot.py  helpers.py  launch.sh  launch_big.sh  launch_scalability_all_jobs.sh  run.sh
covid19_pilot_workflow/SnakeMake/: Snakefile  launch.sh
resources/assets/: 1.a_build_model_bb.sh  1.b_build_model_from_sif.sh  1_build_model_bb.sh  1_run_maboss_bb.sh  2_run_personalize_patient_bb.sh  2_run_single_cell_bb.sh  3_run_maboss_bb.sh  3_run_personalize_patient_bb.sh  4_print_drug_results.sh  4_run_physiboss_bb.sh
resources/assets/FromSpeciesToMaBoSSModel/: FromSpeciesToMaBoSSModel.sh  download_database.py  pipeline.py  pypath_functions.py
resources/assets/MaBoSS_BB/: MaBoSS_analysis.sh  MaBoSS_sensitivity_analysis.sh  sensitivity_analysis.py
resources/assets/PhysiBoSS/: PhysiBoSS.sh  PhysiBoSS_model.sh
resources/assets/personalize_patient/: personalize_cellline.R  personalize_patient.R
resources/assets/print_result_drugs/: print_result_drugs.py  print_result_drugs.sh
resources/assets/single_cell/: single_cell_processing.R  single_cell_processing_individual.R
resources/data/: Sub_genes.csv  genes_druggable.csv  genes_target.csv  metadata.tsv  metadata_10x.tsv  metadata_2x.tsv  metadata_4x.tsv  metadata_6x.tsv  metadata_8x.tsv  metadata_clean.tsv  personalization.yml  prova.sif  scenario_1_a.yml  scenario_1_b.yml
resources/images/: MaBoSS.singularity  PhysiCell-COVID19.singularity
uc2_BBs/: README.md  installed_files.txt  setup.cfg
uc2_BBs/src/build_model_from_genes/: __init__.py  __main__.py  main.py
uc2_BBs/src/maboss_bb/: __init__.py  __main__.py  main.py
uc2_BBs/src/personalize_patient/: main.py
uc2_BBs/src/print_drug_results/: __init__.py  __main__.py  main.py
uc2_BBs/src/uc2_BBs_commons/: assets.py  image.py
uc2_workflow/: README.md
uc2_workflow/PyCOMPSs/: final.py  run.sh  uc2.py  utils.py
