[metadata]
name = covid19_BBs
version = 0.0.1
author = PerMedCoE Project
author_email = infoPerMedCoE@bsc.es
description = This package provides the a set of Building Blocks for Covid-19 Pilot workflow.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PerMedCoE/PilotWorkflow/Covid19
project_urls =
    Bug Tracker = https://github.com/PerMedCoE/PilotWorkflow/Covid19/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires = permedcoe>=0.0.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    maboss = maboss.__main__:main
    single_cell_processing = single_cell_processing.__main__:main
    physiboss = physiboss.__main__:main
    personalize_patient = personalize_patient.__main__:main
    meta_analysis = meta_analysis.__main__:main
