[metadata]
name = uc2_BBs
version = 0.0.1
author = PerMedCoE Project
author_email = infoPerMedCoE@bsc.es
description = This package provides the a set of Building Blocks for Use Case 2 workflow.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PerMedCoE/UC2Workflow
project_urls =
    Bug Tracker = https://github.com/PerMedCoE/UC2Workflow/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires = permedcoe>=0.0.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    maboss_bb = maboss_bb.__main__:main
    personalize_patient = personalize_patient.__main__:main
    build_model_from_genes = build_model_from_genes.__main__:main
    print_drug_results = print_drug_results.__main__:main